# pqproxy

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  TODO.md
certs/: ca.crt  ca.key  client.crt  client.key  server.crt  server.key
config/: pqproxy.dev.yaml  pqproxy.example.yaml
deploy/: README.md  pqproxy.service
deploy/grafana/: pqproxy-dashboard.json  prometheus-scrape.snippet.yml
docs/decisions/: 001-identity-inject-not-guc.md  002-pipeline-error-recovery.md
include/: backend_pool.h  config_yaml.h  metrics_http.h  metrics_internal.h  pqproxy.h  pqproxy_internal.h  scram_client.h
scripts/: gen_dev_certs.sh  run_e2e_proxy.sh  run_live_scram_test.sh  run_rls_integration.sh
src/: backend_pool.c  config_yaml.c  identity.c  iouring_loop.c  ktls.c  main.c  metrics.c  metrics_http.c  rewrite_engine.c  scram_client.c  tls_mtls.c
tests/: load_harness.c  test_backend_pool.c  test_config_yaml.c  test_identity.c  test_metrics.c  test_metrics_http.c  test_reconnect.c  test_rewrite.c  test_rls_proxy.c  test_scram_client.c  test_scram_live.c
